Notify about build using previous image

--- a/.drone.yml
+++ b/.drone.yml
@@ -15,6 +15,10 @@
 # $ drone org secret ls songsterr --format="{{ . }}"
 pipeline:
 
+  notify_start:
+    image: hub.terra.songsterr.com/drone-slack
+    start: true
+
   build:
     image: docker:17.03
     privileged: true
@@ -32,5 +36,10 @@ pipeline:
       - NAME=hub.terra.songsterr.com/${DRONE_REPO_NAME}
       - BRANCH=${DRONE_BRANCH##feature/}
       - COMMIT=${DRONE_COMMIT:0:8}
+
+  notify_finish:
+    image: hub.terra.songsterr.com/drone-slack
+    when:
+      status: [ success, failure ]
 
 branches: master
